test/invalid_confs/invalid_wild.lua
-- ERROR: leading wildcast
Listen "8080" {
    Host "*h.exampl.com" {
        echo = "hello",
    },
}
